--- a/main.html
+++ b/main.html
@@ -10,9 +10,9 @@
 	
 <nav>
 <ul>
-	<li><a href="http//accio.com">Accio</a></li>
-	<li><a href="http//accio.com">Accio</a></li>
-	<li><a href="http//accio.com">Accio</a></li>
+	<li><a href="https://acciojob.com/">Accio</a></li>
+	<li><a href="https://acciojob.com/">Accio</a></li>
+	<li><a href="https://acciojob.com/">Accio</a></li>
 	
 </ul>
 </nav>
