--- a/main.html
+++ b/main.html
@@ -1,39 +1,31 @@
 <!DOCTYPE html>
-
-<html>
-
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-	
-<nav>
-<ul>
-	<li><a href="https://acciojob.com/">Accio</a></li>
-	<li><a href="https://acciojob.com/">Accio</a></li>
-	<li><a href="https://acciojob.com/">Accio</a></li>
-	
-</ul>
-</nav>
-	<h1>3 random audios</h1>
-<audio controls>
-    <source src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" type="audio/mp3">
+
+  <nav>
+    <ul>
+      <li><a href="https://acciojob.com/">Accio</a></li>
+      <li><a href="https://example.com/">Example</a></li>
+      <li><a href="https://developer.mozilla.org/">MDN</a></li>
+    </ul>
+  </nav>
+
+  <h1>3 random audios</h1>
+
+  <audio controls
+    src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3">
   </audio>
 
-  <!-- audio 02 -->
-  <audio controls>
-    <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
+  <audio controls
+    src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg">
   </audio>
 
-  <!-- audio 03 -->
-  <audio controls>
-    <source src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" type="audio/mp3">
+  <audio controls
+    src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3">
   </audio>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
 
+  <script src="./script.js"></script>
 </body>
-
 </html>
